convert to python package

--- a/notebooks/mandelbrot.ipynb
+++ b/notebooks/mandelbrot.ipynb
@@ -5,36 +5,17 @@
    "execution_count": 1,
    "id": "157b251b-92a7-4a13-9424-0d7f040cfd7d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/normal/.local/lib/python3.12/site-packages/torch/utils/cpp_extension.py:1967: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
-      "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import transformer as kernel_transformer\n",
-    "\n",
-    "from torch.utils.cpp_extension import load\n",
     "import torch\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "trampoline = load(\n",
-    "    \"extension\",\n",
-    "    sources=[\"trampoline.cu\"],\n",
-    "    extra_ldflags=[\"-lnvrtc\", \"-lcuda\"],\n",
-    "    extra_cuda_cflags=[\"-g\"],\n",
-    ")"
+    "from opal_ptx import CuModuleWrapper, kernel_transformer\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0bfb7d93-c853-4d42-bc35-f2554b075626",
    "metadata": {},
    "outputs": [],
@@ -83,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "85659fa2-2fe8-454d-9511-d84e7f63f774",
    "metadata": {},
    "outputs": [
@@ -91,16 +72,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.8063360452651978\n"
+      "1.8305599689483643\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7558cd1e8500>"
+       "<matplotlib.image.AxesImage at 0x77e0c02c9eb0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -124,7 +105,7 @@
     "\n",
     "result = torch.zeros((width, height), dtype=torch.float32, device=\"cuda\")\n",
     "\n",
-    "wrapper = trampoline.CuModuleWrapper()\n",
+    "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
     "block_size_x = 32\n",
