--- a/notebooks/shfl_test.ipynb
+++ b/notebooks/shfl_test.ipynb
@@ -5,42 +5,22 @@
    "execution_count": 2,
    "id": "8a682c52-e6ed-4865-ac2f-d11318d5b80a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/normal/.local/lib/python3.12/site-packages/torch/utils/cpp_extension.py:1967: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
-      "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import transformer as kernel_transformer\n",
-    "\n",
+    "from opal_ptx import CuModuleWrapper, kernel_transformer\n",
     "from torch.utils.cpp_extension import load\n",
     "import torch\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
-    "trampoline = load(\n",
-    "    \"extension\",\n",
-    "    sources=[\"trampoline.cu\"],\n",
-    "    extra_ldflags=[\"-lnvrtc\", \"-lcuda\"],\n",
-    "    extra_cuda_cflags=[\"-g\"],\n",
-    ")\n"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f5fcd1bf-14cf-49bb-9f21-f13dc1c9fea2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#ptx.shfl.sync.down.b32(d, a, i, 31, 0xFFFFFFFF) \n",
-    "\n",
     "@kernel_transformer.fragment()\n",
     "def warp_sum(out: \"u32\", a: \"u32\"):\n",
     "    accum: u32 = a \n",
@@ -72,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "fb5543ee-232e-496c-bb60-eaded5c1a06d",
    "metadata": {},
    "outputs": [
@@ -95,7 +75,7 @@
     "\n",
     "result = torch.zeros((64,), dtype=torch.uint32, device=\"cuda\")\n",
     "\n",
-    "wrapper = trampoline.CuModuleWrapper()\n",
+    "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
     "wrapper.launch_kernel(\"shfl_test\", (1, 1, 1), (64, 1, 1), (result.data_ptr(),))\n",
