--- a/notebooks/sierpinski.ipynb
+++ b/notebooks/sierpinski.ipynb
@@ -2,39 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8b9e6044-029b-418d-9a49-d0f0dd486f12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/normal/.local/lib/python3.12/site-packages/torch/utils/cpp_extension.py:1967: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
-      "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import transformer as kernel_transformer\n",
-    "\n",
+    "from opal_ptx import CuModuleWrapper, kernel_transformer\n",
     "from torch.utils.cpp_extension import load\n",
     "import torch\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "trampoline = load(\n",
-    "    \"extension\",\n",
-    "    sources=[\"trampoline.cu\"],\n",
-    "    extra_ldflags=[\"-lnvrtc\", \"-lcuda\"],\n",
-    "    extra_cuda_cflags=[\"-g\"],\n",
-    ")"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "9178370f-6018-44e3-bb0b-0d07b880532e",
    "metadata": {},
    "outputs": [],
@@ -67,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "b1180962-4408-4e61-aef8-b0b75442d0fc",
    "metadata": {},
    "outputs": [
@@ -75,16 +57,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6104320287704468\n"
+      "0.3970879912376404\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x77809672a810>"
+       "<matplotlib.image.AxesImage at 0x7ceb9c2d2600>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -102,14 +84,14 @@
    "source": [
     "kernel_builder = kernel_transformer.KernelBuilder()\n",
     "sierpinski_kernel(kernel_builder)\n",
-    "kernel_code = kernel_builder.generate(\"sm_75\")\n",
+    "kernel_code = kernel_builder.generate()\n",
     "    \n",
     "\n",
     "width, height = 1024, 1024\n",
     "\n",
     "result = torch.zeros((width, height), dtype=torch.float32, device=\"cuda\")\n",
     "\n",
-    "wrapper = trampoline.CuModuleWrapper()\n",
+    "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
     "block_size_x = 32\n",
