--- a/notebooks/simple_wmma_sgemm.ipynb
+++ b/notebooks/simple_wmma_sgemm.ipynb
@@ -5,77 +5,19 @@
    "execution_count": 1,
    "id": "512a3491-533e-4fee-aed5-00ec7fbafa39",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/normal/.local/lib/python3.12/site-packages/torch/utils/cpp_extension.py:1967: UserWarning: TORCH_CUDA_ARCH_LIST is not set, all archs for visible cards are included for compilation. \n",
-      "If this is not desired, please set os.environ['TORCH_CUDA_ARCH_LIST'].\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import transformer as kernel_transformer\n",
+    "from opal_ptx import CuModuleWrapper, kernel_transformer\n",
     "\n",
     "from torch.utils.cpp_extension import load\n",
     "import torch\n",
     "\n",
-    "from matplotlib import pyplot as plt\n",
-    "trampoline = load(\n",
-    "    \"extension\",\n",
-    "    sources=[\"trampoline.cu\"],\n",
-    "    extra_ldflags=[\"-lnvrtc\", \"-lcuda\"],\n",
-    "    extra_cuda_cflags=[\"-g\"],\n",
-    ")\n"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6eaaa4d5-7c3c-4929-bbc5-cf1399dfe2e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "import tempfile\n",
-    "import sass_graph\n",
-    "\n",
-    "def visualize_opal_kernel(kernel, arch=\"sm_75\"):\n",
-    "    kernel_builder = kernel_transformer.KernelBuilder()\n",
-    "    wmma_test(kernel_builder)\n",
-    "    kernel_code = kernel_builder.generate(arch)\n",
-    "    \n",
-    "    with tempfile.NamedTemporaryFile() as temp_file:\n",
-    "        temp_file.write(kernel_code.encode(\"utf-8\"))\n",
-    "        subprocess.run([\"ptxas\", \"--gpu-name\", arch, temp_file.name])\n",
-    "\n",
-    "    cfgs = sass_graph.generate_cfgs(sass_graph.disassemble(\"elf.o\"))\n",
-    "    return sass_graph.display_cfg(cfgs[\"wmma_test\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c8fc1d10-760d-450c-a513-d9b823190b34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import struct \n",
-    "def float_to_int32(value):\n",
-    "    # Pack the float into 4 bytes using IEEE 754 format\n",
-    "    packed = struct.pack('f', value)\n",
-    "    \n",
-    "    # Unpack those bytes as a 32-bit unsigned integer\n",
-    "    unpacked = struct.unpack('I', packed)[0]\n",
-    "    \n",
-    "    return unpacked\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
    "id": "31f7ff35-34b4-4641-aae8-2f1dcb4b469b",
    "metadata": {},
    "outputs": [],
@@ -109,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "id": "b68c7679-5c51-425c-a45d-c6d5112d2ea2",
    "metadata": {},
    "outputs": [
@@ -117,13 +59,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.3228, 0.0168, 0.1490,  ..., 0.5068, 0.2299, 0.5762],\n",
-      "        [0.5312, 0.4934, 0.1993,  ..., 0.3250, 0.9209, 0.8271],\n",
-      "        [0.6807, 0.9517, 0.7168,  ..., 0.2417, 0.2417, 0.2766],\n",
+      "tensor([[0.2263, 0.0316, 0.0526,  ..., 0.9868, 0.8169, 0.5220],\n",
+      "        [0.9502, 0.2150, 0.6509,  ..., 0.4800, 0.8105, 0.3823],\n",
+      "        [0.7480, 0.5503, 0.3638,  ..., 0.0263, 0.2659, 0.4893],\n",
       "        ...,\n",
-      "        [0.2944, 0.0128, 0.0894,  ..., 0.2976, 0.8716, 0.1316],\n",
-      "        [0.1379, 0.5337, 0.7734,  ..., 0.1713, 0.2522, 0.0244],\n",
-      "        [0.0586, 0.2920, 0.5508,  ..., 0.2754, 0.8848, 0.6543]],\n",
+      "        [0.0878, 0.2206, 0.6890,  ..., 0.4414, 0.4863, 0.3894],\n",
+      "        [0.7188, 0.8145, 0.6309,  ..., 0.2413, 0.3589, 0.5679],\n",
+      "        [0.6646, 0.8462, 0.4480,  ..., 0.6274, 0.3765, 0.9536]],\n",
       "       device='cuda:0')\n",
       "tensor(0., device='cuda:0')\n"
      ]
@@ -147,7 +89,7 @@
     "\n",
     "check = A @ B\n",
     "\n",
-    "wrapper = trampoline.CuModuleWrapper()\n",
+    "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
     "wrapper.launch_kernel(\"simple_wmma_gemm\", ((M // 16), (N // 16), 1), (32, 1, 1), (A.data_ptr(), B.data_ptr(), D.data_ptr(), M, N, K))\n",
@@ -155,6 +97,14 @@
     "print(D)\n",
     "print((D - check).sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb0689c4-93bb-44d7-b1a0-f112184d9b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
