Update notebooks and add game of life

--- a/notebooks/shfl_test.ipynb
+++ b/notebooks/shfl_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8a682c52-e6ed-4865-ac2f-d11318d5b80a",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f5fcd1bf-14cf-49bb-9f21-f13dc1c9fea2",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fb5543ee-232e-496c-bb60-eaded5c1a06d",
    "metadata": {},
    "outputs": [
@@ -60,11 +60,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([496,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0, 496,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "          0,   0,   0,   0,   0,   0,   0,   0], dtype=torch.uint32)\n"
+      "tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n",
+      "        1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "        0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=torch.uint32)\n"
      ]
     }
    ],
@@ -78,7 +76,7 @@
     "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
-    "wrapper.launch_kernel(\"shfl_test\", (1, 1, 1), (64, 1, 1), (result.data_ptr(),))\n",
+    "wrapper.launch_kernel(\"shfl_test\", (1, 1, 1), (64, 1, 1), (result.data_ptr(),), 0)\n",
     "print(result.cpu())"
    ]
   },
