--- a/notebooks/sierpinski.ipynb
+++ b/notebooks/sierpinski.ipynb
@@ -99,7 +99,7 @@
     "start_event = torch.cuda.Event(enable_timing=True)\n",
     "end_event = torch.cuda.Event(enable_timing=True)\n",
     "start_event.record()\n",
-    "wrapper.launch_kernel(\"sierpinski_kernel\", (width // block_size_x, height // block_size_y, 1), (block_size_x, block_size_y, 1), (result.data_ptr(), width, height, 4))\n",
+    "wrapper.launch_kernel(\"sierpinski_kernel\", (width // block_size_x, height // block_size_y, 1), (block_size_x, block_size_y, 1), (result.data_ptr(), width, height, 4), 0)\n",
     "end_event.record()\n",
     "\n",
     "torch.cuda.synchronize()\n",
