--- a/notebooks/simple_wmma_sgemm.ipynb
+++ b/notebooks/simple_wmma_sgemm.ipynb
@@ -92,7 +92,7 @@
     "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
-    "wrapper.launch_kernel(\"simple_wmma_gemm\", ((M // 16), (N // 16), 1), (32, 1, 1), (A.data_ptr(), B.data_ptr(), D.data_ptr(), M, N, K))\n",
+    "wrapper.launch_kernel(\"simple_wmma_gemm\", ((M // 16), (N // 16), 1), (32, 1, 1), (A.data_ptr(), B.data_ptr(), D.data_ptr(), M, N, K), 0)\n",
     "\n",
     "print(D)\n",
     "print((D - check).sum())"
