--- a/notebooks/mandelbrot.ipynb
+++ b/notebooks/mandelbrot.ipynb
@@ -72,13 +72,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.629472017288208\n"
+      "1.8535679578781128\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x773f3036fda0>"
+       "<matplotlib.image.AxesImage at 0x7de2680d4b60>"
       ]
      },
      "execution_count": 3,
