--- a/notebooks/sierpinski.ipynb
+++ b/notebooks/sierpinski.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8b9e6044-029b-418d-9a49-d0f0dd486f12",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9178370f-6018-44e3-bb0b-0d07b880532e",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b1180962-4408-4e61-aef8-b0b75442d0fc",
    "metadata": {},
    "outputs": [
@@ -57,16 +57,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.3970879912376404\n"
+      "0.2813760042190552\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ceb9c2d2600>"
+       "<matplotlib.image.AxesImage at 0x71e6802bb020>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
