--- a/notebooks/simple_wmma_sgemm.ipynb
+++ b/notebooks/simple_wmma_sgemm.ipynb
@@ -17,13 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "31f7ff35-34b4-4641-aae8-2f1dcb4b469b",
    "metadata": {},
    "outputs": [],
    "source": [
     "@kernel_transformer.kernel()\n",
-    "def simple_wmma_gemm(A: \"u64\", B: \"u64\", D: \"u64\", m: \"u32\", n: \"u32\", k: \"u32\"):\n",
+    "def simple_wmma_gemm(A_: \"u64\", B_: \"u64\", D_: \"u64\", m: \"u32\", n: \"u32\", k: \"u32\"):\n",
+    "    A: u64\n",
+    "    ptx.cvta.to._global.u64(A, A_)\n",
+    "\n",
+    "    B: u64\n",
+    "    ptx.cvta.to._global.u64(B, B_)\n",
+    "    \n",
+    "    D: u64\n",
+    "    ptx.cvta.to._global.u64(D, D_)\n",
+    "    \n",
     "    x: u32 = u32(\"%ctaid.x\") * 16\n",
     "    y: u32 = u32(\"%ctaid.y\") * 16\n",
     "\n",
@@ -31,7 +40,7 @@
     "    b: b32(8)\n",
     "    d: b32(8)\n",
     "\n",
-    "    for i in range(8):\n",
+    "    for i in range(len(d)):\n",
     "        ptx.mov.b32(d[i], 0)\n",
     "    \n",
     "    KI: u32 = 0\n",
@@ -45,13 +54,105 @@
     "        ptx.wmma.mma.sync.aligned.m16n16k16.row.row.f32.f32({*d}, {*a}, {*b}, {*d})\n",
     "        KI += 16\n",
     "\n",
-    "    _D: u64 = D + (y * n + x) * 4\n",
+    "    _D: u64 = D_ + (y * n + x) * 4\n",
     "    ptx.wmma.store.d.sync.aligned.m16n16k16._global.row.f32([_D], {*d}, m)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
+   "id": "454261ce-748b-4649-a928-355f3c6caa7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@kernel_transformer.kernel()\n",
+    "def simple_wmma_gemm_f16(A_: \"u64\", B_: \"u64\", D_: \"u64\", m: \"u32\", n: \"u32\", k: \"u32\"):\n",
+    "    A: u64\n",
+    "    ptx.cvta.to._global.u64(A, A_)\n",
+    "\n",
+    "    B: u64\n",
+    "    ptx.cvta.to._global.u64(B, B_)\n",
+    "    \n",
+    "    D: u64\n",
+    "    ptx.cvta.to._global.u64(D, D_)\n",
+    "    \n",
+    "    x: u32 = u32(\"%ctaid.x\") * 16\n",
+    "    y: u32 = u32(\"%ctaid.y\") * 16\n",
+    "\n",
+    "    a: b32(8)\n",
+    "    b: b32(8)\n",
+    "    d: b32(4)\n",
+    "\n",
+    "    for i in range(len(d)):\n",
+    "        ptx.mov.b32(d[i], 0)\n",
+    "    \n",
+    "    KI: u32 = 0\n",
+    "    while KI < k:\n",
+    "        _A: u64 = A + (y * k + KI) * 2\n",
+    "        _B: u64 = B + (KI * n + x) * 2\n",
+    "        \n",
+    "        ptx.wmma.load.a.sync.aligned._global.m16n16k16.row.f16({*a}, [_A], k)\n",
+    "        ptx.wmma.load.b.sync.aligned._global.m16n16k16.row.f16({*b}, [_B], n)\n",
+    "    \n",
+    "        ptx.wmma.mma.sync.aligned.m16n16k16.row.row.f16.f16({*d}, {*a}, {*b}, {*d})\n",
+    "        KI += 16\n",
+    "\n",
+    "    _D: u64 = D_ + (y * n + x) * 2\n",
+    "    ptx.wmma.store.d.sync.aligned.m16n16k16._global.row.f16([_D], {*d}, m)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "7f806e3d-d058-49f9-ae0b-1cfed8587e89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Maximum element difference tensor(2.5000, device='cuda:0', dtype=torch.float16)\n",
+      "tensor([[501.0000, 400.0000, 498.0000,  ..., 496.0000, 516.0000, 407.7500],\n",
+      "        [502.5000, 432.2500, 535.5000,  ..., 504.0000, 545.5000, 527.5000],\n",
+      "        [518.5000, 452.0000, 511.2500,  ..., 520.5000, 558.0000, 465.5000],\n",
+      "        ...,\n",
+      "        [467.2500, 402.0000, 497.2500,  ..., 443.5000, 532.5000, 473.5000],\n",
+      "        [525.0000, 482.2500, 564.5000,  ..., 520.5000, 527.0000, 469.5000],\n",
+      "        [563.5000, 437.5000, 497.2500,  ..., 509.2500, 530.5000, 497.2500]],\n",
+      "       device='cuda:0', dtype=torch.float16)\n",
+      "We fucked up\n"
+     ]
+    }
+   ],
+   "source": [
+    "kernel_builder = kernel_transformer.KernelBuilder()\n",
+    "simple_wmma_gemm_f16(kernel_builder)\n",
+    "kernel_code = kernel_builder.generate()\n",
+    "\n",
+    "M = 512\n",
+    "N = 512\n",
+    "K = 512\n",
+    "\n",
+    "A = torch.randn((M, K), dtype=torch.float16, device=\"cuda\") + 1\n",
+    "B = torch.randn((K, N), dtype=torch.float16, device=\"cuda\") + 1\n",
+    "D = torch.zeros((M, N), dtype=torch.float16, device=\"cuda\")\n",
+    "\n",
+    "check = (A @ B)\n",
+    "wrapper = CuModuleWrapper()\n",
+    "wrapper.load_ptx_code(kernel_code)\n",
+    "\n",
+    "wrapper.launch_kernel(\"simple_wmma_gemm_f16\", ((M // 16), (N // 16), 1), (32, 1, 1), (A.data_ptr(), B.data_ptr(), D.data_ptr(), M, N, K), 0)\n",
+    "print(\"Maximum element difference\", (D - check).abs().max())\n",
+    "print(D) \n",
+    "if torch.allclose(D, check, atol=0.124, rtol=0):\n",
+    "    print(\"MATCH\")\n",
+    "else:\n",
+    "    print(\"We fucked up\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "id": "b68c7679-5c51-425c-a45d-c6d5112d2ea2",
    "metadata": {},
    "outputs": [
@@ -59,15 +160,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.2263, 0.0316, 0.0526,  ..., 0.9868, 0.8169, 0.5220],\n",
-      "        [0.9502, 0.2150, 0.6509,  ..., 0.4800, 0.8105, 0.3823],\n",
-      "        [0.7480, 0.5503, 0.3638,  ..., 0.0263, 0.2659, 0.4893],\n",
-      "        ...,\n",
-      "        [0.0878, 0.2206, 0.6890,  ..., 0.4414, 0.4863, 0.3894],\n",
-      "        [0.7188, 0.8145, 0.6309,  ..., 0.2413, 0.3589, 0.5679],\n",
-      "        [0.6646, 0.8462, 0.4480,  ..., 0.6274, 0.3765, 0.9536]],\n",
-      "       device='cuda:0')\n",
-      "tensor(0., device='cuda:0')\n"
+      "Maximum element difference tensor(0.0026, device='cuda:0')\n",
+      "MATCH\n"
      ]
     }
    ],
@@ -76,32 +170,39 @@
     "simple_wmma_gemm(kernel_builder)\n",
     "kernel_code = kernel_builder.generate()\n",
     "\n",
-    "M = 32\n",
-    "N = 32\n",
-    "K = 32\n",
+    "M = 512\n",
+    "N = 512\n",
+    "K = 512\n",
     "\n",
-    "#A = torch.eye(K, dtype=torch.float16, device=\"cuda\")\n",
-    "#A = torch.triu(torch.full((K, K), 3, dtype=torch.float16, device=\"cuda\"))\n",
-    "A = torch.rand((M, K), dtype=torch.float16, device=\"cuda\")\n",
-    "B = torch.eye(K, dtype=torch.float16, device=\"cuda\")\n",
-    "\n",
+    "A = torch.randn((M, K), dtype=torch.float16, device=\"cuda\") + 1\n",
+    "B = torch.randn((K, N), dtype=torch.float16, device=\"cuda\") + 1\n",
     "D = torch.zeros((M, N), dtype=torch.float32, device=\"cuda\")\n",
     "\n",
-    "check = A @ B\n",
-    "\n",
+    "check = (A.to(torch.float32) @ B.to(torch.float32)).to(torch.float32)\n",
     "wrapper = CuModuleWrapper()\n",
     "wrapper.load_ptx_code(kernel_code)\n",
     "\n",
     "wrapper.launch_kernel(\"simple_wmma_gemm\", ((M // 16), (N // 16), 1), (32, 1, 1), (A.data_ptr(), B.data_ptr(), D.data_ptr(), M, N, K), 0)\n",
+    "print(\"Maximum element difference\", (D - check).abs().max())\n",
     "\n",
-    "print(D)\n",
-    "print((D - check).sum())"
+    "if torch.allclose(D, check, atol=0.124, rtol=0):\n",
+    "    print(\"MATCH\")\n",
+    "else:\n",
+    "    print(\"We fucked up\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cb0689c4-93bb-44d7-b1a0-f112184d9b6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d759ac4-3a99-4e12-aeb1-bee0597b6569",
    "metadata": {},
    "outputs": [],
    "source": []
