tma example syntaxt error

--- a/notebooks/simple_tma.ipynb
+++ b/notebooks/simple_tma.ipynb
@@ -108,7 +108,7 @@
     "    mbar0: shared(u64, 1)\n",
     "    buffer: shared(f32, 100 * 100)\n",
     "    ptx.mbarrier.init.shared__cta.b64([mbar0], 1)\n",
-    "    ptx.fence.proxy.async.shared__cta() # make mbarrier initilization visible to the TMA engine.\n",
+    "    ptx.fence.proxy._async.shared__cta() # make mbarrier initilization visible to the TMA engine.\n",
     "    \n",
     "    if u32(\"%laneid\") == 0:\n",
     "        current_state: u64 = 0\n",
